# github_training_workshops

./: .gitignore  LICENSE
game_devs-snapshot/: .gitignore  .gitmodules  .mcp.json  CMakeLists.txt  CMakePresets.json  PROMPTS_GUIDE.md  README.md  build_and_run.sh
game_devs-snapshot/.agent/workflows/: shader-improvements.md
game_devs-snapshot/.github/: copilot-instructions.md
game_devs-snapshot/.github/agents/: blenderkit-asset-scout.agent.md  character-artist.agent.md  code-reviewer.agent.md  combat-systems.agent.md  doc-maintainer.agent.md  enemy-ai.agent.md  environment-artist.agent.md  game-architecture.agent.md  gdscript-ui.agent.md  glb-import-reviewer.agent.md  godot-cpp-expert.agent.md  hello-test.agent.md  level-populator.agent.md  model-spec-writer.agent.md  sprint-planner.agent.md  texture-artist.agent.md
game_devs-snapshot/.github/instructions/: cpp-gdextension.instructions.md  gdscript.instructions.md  scene-files.instructions.md  shader.instructions.md
game_devs-snapshot/.github/prompts/: add-hit-zones.prompt.md  ai-specialist.prompt.md  bind-cpp-method.prompt.md  blender-create-character.prompt.md  blender-create-prop.prompt.md  blender-create-vehicle.prompt.md  code-review-changes.prompt.md  combat-specialist.prompt.md  configure-ambience-system.prompt.md  create-character-animations.prompt.md  create-player-model-spec.prompt.md  debug-extension-not-loading.prompt.md  generate-pbr-textures.prompt.md  implement-ai-attack-state.prompt.md  implement-ai-cover-seek.prompt.md  implement-reload-state.prompt.md  implement-volumetric-lighting.prompt.md  implement-weapon-raycast.prompt.md  import-blenderkit-model.prompt.md  import-mixamo-animations.prompt.md  import-obj-model.prompt.md  local-developer-setup.prompt.md  material-library-workflow.prompt.md  place-level-assets.prompt.md  plan-sprint.prompt.md  poll-blenderkit-download.prompt.md  populate-1960s-props.prompt.md  populate-level-1.prompt.md  register-new-class.prompt.md  search-blenderkit-asset.prompt.md  setup-animation-tree.prompt.md  setup-blenderkit.prompt.md  setup-worldenvironment-1960s.prompt.md  spec-building-model.prompt.md  spec-enemy-model.prompt.md  spec-player-model.prompt.md  spec-prop-model.prompt.md  spec-vehicle-model.prompt.md  update-cmake-sources.prompt.md  update-docs.prompt.md  (+2 more)
game_devs-snapshot/docs/: ANIMATION_IMPORT_STATUS.md  BUILD_INSTRUCTIONS.md  HUD_TESTING.md  LEVEL_1_DESIGN.md  MCP_SETUP.md  MEMORY.md  MODEL_IMPORT_SUMMARY.md  PHASE1_MANUAL_INSTRUCTIONS.md  PIGEON_INTEGRATION_SUMMARY.md  PRODUCTION_PLAN.md  QUICKSTART_SAVAGE.md  ROAD_CITY_INTEGRATION.md  SAVAGE_CHARACTER_INTEGRATION.md
game_devs-snapshot/docs/models/: ENEMY_SCAVENGER_SPEC.md  PLAYER_MODEL_SPEC.md  VEHICLE_SEDAN_SPEC.md
game_devs-snapshot/docs/workshops/: 00-key-definitions-and-best-practices.md  01-foundational-workshop.md  02-intermediate-workshop.md  03-advanced-workshop.md  04-expert-workshop.md  CHAIN_OF_THOUGHT.md  TREE_OF_THOUGHT.md
game_devs-snapshot/game/: .gitignore  project.godot  urban_survivor.gdextension
game_devs-snapshot/game/scenes/: level_1.gd  level_1.tscn  level_1.tscn.backup_20260106_215628  level_1.tscn.bak  player.tscn  post_processing.tscn  reload_test.gd  reload_test.gd.uid  test_scene.gd
game_devs-snapshot/game/scripts/: RoadCityLOD.gd  post_process_controller.gd.uid
game_devs-snapshot/src/: register_types.cpp
game_devs-snapshot/src/ai/: ai_perception.cpp  ai_perception.hpp
game_devs-snapshot/src/combat/: damage_system.hpp  weapon.cpp  weapon.hpp
game_devs-snapshot/src/inventory/: inventory.cpp  inventory.hpp  item.cpp
game_devs-snapshot/src/player/: player_controller.cpp
game_devs-snapshot/src/survival/: survival_stats.cpp
game_devs-snapshot/src/ui/: hud.cpp
game_devs-snapshot/src/world/: level_manager.hpp  scavenge_point.cpp  scavenge_point.hpp
game_devs-snapshot/visualstudio/vs2026-x64/: urban_survivor.slnx
ghcp.game.workshop/: CMakeLists.txt  README.md  ROADMAP.md  plan.agent.md
ghcp.game.workshop/.github/: copilot-instructions.md
ghcp.game.workshop/.github/agents/: animation-artist.agent.md  audio-ambience.agent.md  blender-artist.agent.md  debug-helper.agent.md  shader-specialist.agent.md
ghcp.game.workshop/.github/instructions/: cmake.instructions.md  cxx.instructions.md  docs.instructions.md  gdscript.instructions.md
ghcp.game.workshop/.github/prompts/: cpp-engineer.prompt.md  cpp-reviewer.prompt.md  cpp-test-engineer.prompt.md  sprint-planner.prompt.md
ghcp.game.workshop/docs/: AGENT_WORKFLOW.md  ARCHITECTURE.md  ART_GUIDELINES.md  ASSET_TRACKER.md  ASSIMP_SETUP.md  BUILDING_PLACEMENT_MAP.md  CODING_STANDARDS.md  COPILOT_PERFORCE_VS_GIT_REPORT.md  FPS_INTEGRATION_PLAN.md  IMPORT_MODELS_README.md  IMPORT_PROGRESS_PHASE1.md  INTEGRATION_SUMMARY.md  M1_5_HARDENING_WORKFLOW.md  PHASE1_DEVELOPMENT_PLAN.md  PHASE_2_COMPLETION_REPORT.md  PRODUCTION_PLAN.md  SPEC.md  WORKFLOW.md  cpp_agentic-sdlc-developer-guide.md  game_design_document.md  godot_gdextension_reference.md
ghcp.game.workshop/docs/workshops/: CHAIN_OF_THOUGHT.md  TREE_OF_THOUGHT.md  mcp.md
ghcp.game.workshop/game/: aux_scene.tscn  urban_survivor.gdextension  urban_survivor.gdextension.uid
ghcp.game.workshop/game/scenes/: level_1.gd.uid  level_1.tscn.backup  level_1.tscn.before_pigeons_20260117_205738  main_menu.gd  main_menu.gd.uid  main_menu.tscn  reload_test.gd  test_scene.gd.uid  test_scene.tscn
ghcp.game.workshop/game/scripts/: RoadCityLOD.gd.uid  StreetMaterialApplicator.gd  StreetMaterialApplicator.gd.uid  post_process_controller.gd  test_third_person_camera.gd  test_third_person_camera.gd.uid
ghcp.game.workshop/src/: register_types.hpp
ghcp.game.workshop/src/ai/: enemy_ai.cpp  enemy_ai.hpp
ghcp.game.workshop/src/camera/: third_person_camera.cpp  third_person_camera.hpp
ghcp.game.workshop/src/combat/: damage_system.cpp  weapon.cpp  weapon.hpp
ghcp.game.workshop/src/core/: game_manager.cpp  game_manager.hpp
ghcp.game.workshop/src/inventory/: item.hpp  item_database.cpp  item_database.hpp
ghcp.game.workshop/src/player/: player_controller.cpp  (+1 more)
(+418 files in other folders)
